2007-07-20  Akim Demaille  <demaille@gostai.com>

	"Support" wait & noop
	* src/ast/ast.yml (YieldExp): Rename as...
	(Noop): this.
	* src/ast/all.hh: Adjust.
	* src/object/primitives.cc (object_class_wait): New.
	* src/parser/bison/ugrammar.y, src/parser/bison/utoken.l
	(wait): Store its symbol.
	Use it to implement it as a CallExp.
	Remove useless code.
	* src/uconnection.cc (execute): Display something only if there
	is something to display.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Fix again ast-nodes.mk generation
	* src/ast/Makefile.am: Use always the same name, with $(srcdir),
	so that Make realizes it must update it.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Fix make check
	* src/object/Makefile.am (LDADD): Add libast.
	* src/object/object-test.hh (urbiserver): New.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Activate function calls
	* src/parser/bison/ugrammar.y: Generalize the function call syntax.
	Delete lists that have been spliced.
	(new_exp): Return type is CallExp.
	(name): Type is CallExp.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Remove debug scafolding
	Thanks to Ted and Julian (Valgrind).
	* src/parser/bison/ugrammar.y: Activate dtors.
	* src/runner/runner.cc: Remove debug traces.
	* src/uconnection.cc (UConnection::execute): Deactivate delete.

2007-07-20  Guillaume Deslandes  <deslandes@gostai.com>

	Remove extra delete in uconnection.cc (execute)
	* src/uconnection.cc: here.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Warning: does not work!
	* src/object/atom.hxx (ast/pretty-printer.hh): Include.
	* src/parser/bison/ugrammar.y: Deactivate dtors.
	* src/runner/runner.cc: Add debug scafolding.
	* src/uconnection.cc, src/uexpression.cc: Do not free the Ast.

2007-07-20  Akim Demaille  <demaille@gostai.com>

	Prettify 
	* src/ast/ast.yml (CallExp::printer): Don't display useless parens.
	* src/object/Makefile.am: Don't compile atom.cc, it's empty.