@@ -1,4 +1,43 @@
 # This file is loaded by tests/Makefile.am.  It contains things that
 # are specific to a given project or even Svn branch.
 
-XFAIL_TESTS += 
+XFAIL_TESTS += 					\
+armor-simple.chk				\
+arithmetics-failures.chk			\
+alias.chk					\
+armor_unarmor.chk				\
+bad-if.chk					\
+bad-whenever.chk				\
+bin.chk						\
+basic.chk					\
+bin_copy.chk					\
+begin_end_report.chk				\
+bug76.chk					\
+comparison.chk					\
+doublecolon.chk					\
+empty_then.chk					\
+exec.chk					\
+events.chk					\
+for-loop.chk					\
+function_delete.chk				\
+function_return.chk				\
+groups.chk					\
+hash_and_list.chk				\
+hierarchical_tags.chk				\
+load.chk					\
+illegal_operation_on_void.chk			\
+nameresolution.chk				\
+nameresolution_array.chk			\
+multiinheritance.chk				\
+nameresolution_objects.chk			\
+nameresolution_dollars.chk			\
+new_init.chk					\
+long-identifiers.chk				\
+onleave.chk					\
+object_events.chk				\
+onleave2.chk					\
+speed_zero.chk					\
+size.chk					\
+synchro_assignment.chk				\
+tag.chk						\
+variable-qualifiers.chk
